--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Brandon's Portolio Site</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   </head>
   <body>
     <div class = "container-fluid bg-dark">
@@ -55,9 +56,16 @@
       </div>
       <div class = "row">
         <div class = "col">
-          <p>Hello! My name is Brandon and I am part of the Galvanize Web Development Immersive program. For my first major project, I have been tasked with creating a portfolio website. This will host all of the projects I create, whether in this program or beyond. For now, only the landing page has been completed, the rest will follow as time goes on. </p>
+          <p>Hello! My name is Brandon and I am part of the Galvanize Web Development Immersive program. For my first major project, I have been tasked with creating a portfolio website. This will host all of the projects I create, whether in this program or beyond. For now, only the landing page has been completed; the rest will follow as time goes on. </p>
         </div>
       </div>
+    </div>
+    <div class = "container text-center">
+      <footer>
+        <a href = "https://www.facebook.com/brandoncyu" target="_blank"><i class="fab fa-facebook fa-2x p-2"></i></a>
+        <a href = "https://www.instagram.com/__little_raven__/" target="_blank"><i class="fab fa-instagram fa-2x p-2"></i></a>
+        <a href = "https://www.linkedin.com/in/brandon-yu-097b9442/" target="_blank"><i class="fab fa-linkedin fa-2x p-2"></i></a>
+      </footer>
     </div>
   </body>
 </html>
