--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Brandon's Portolio Site</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
     <div class = "container-fluid bg-dark">
@@ -60,11 +61,36 @@
         </div>
       </div>
     </div>
+    <section class = "flex-container">
+      <div id = "box">
+        <a href = '#'><img src = "placeholder1.jpg" class = "image">
+          <div class="overlay">
+            <div class="text">This Is My First Project</div>
+          </div>
+        </a>
+      </div>
+      <div id = "box">
+        <a href = '#'><img src = "placeholder2.jpg" class = "image"><div class="overlay">
+          <div class="text">This Is My Second Project</div>
+        </div></a>
+      </div>
+      <div id = "box">
+        <a href = '#'><img src = "placeholder3.jpg" class = "image"><div class="overlay">
+          <div class="text">This Is My Third Project</div>
+        </div></a>
+      </div>
+      <div id = "box">
+        <a href = '#'><img src = "placeholder4.jpg" class = "image"><div class="overlay">
+          <div class="text">This Is My Fourth Project</div>
+        </div></a>
+      </div>
+    </section>
     <div class = "container text-center">
       <footer>
         <a href = "https://www.facebook.com/brandoncyu" target="_blank"><i class="fab fa-facebook fa-2x p-2"></i></a>
         <a href = "https://www.instagram.com/__little_raven__/" target="_blank"><i class="fab fa-instagram fa-2x p-2"></i></a>
         <a href = "https://www.linkedin.com/in/brandon-yu-097b9442/" target="_blank"><i class="fab fa-linkedin fa-2x p-2"></i></a>
+        <a href = "https://github.com/Brandoncyu" target="_blank"><i class="fab fa-github-square fa-2x p-2"></i></a>
       </footer>
     </div>
   </body>
